<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ehab.awesomemovies.ui.activities.DetailsActivity">


        <RelativeLayout
            android:id="@+id/activity_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <ImageView
                android:id= "@+id/backdrop_imageview"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:contentDescription="@string/bdImage_description"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/heading_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="60dp"
                android:orientation="horizontal"
                android:padding="20dp">


                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="30dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/poster_imageview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/movie_poster_description" />
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="35dp">

                        <!--<ImageView
                            android:id="@+id/toggle_favorite"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:contentDescription="@string/add_to_favorites_button_description"
                            android:src="@drawable/ic_action_heart" />-->

                        <com.varunest.sparkbutton.SparkButton
                            android:id="@+id/toggle_favorite"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            app:sparkbutton_activeImage="@drawable/ic_star_on"
                            app:sparkbutton_iconSize="40dp"
                            app:sparkbutton_inActiveImage="@drawable/ic_star_off"
                            app:sparkbutton_primaryColor="@color/spark"
                            app:sparkbutton_secondaryColor="@color/spark" />

                    </RelativeLayout>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp">

                            <TextView
                                android:id="@+id/movie_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:textSize="30sp"
                                tools:text="@string/title_experimental_text" />

                            <TextView
                                android:id="@+id/date_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="@string/date_expermintal_text" />

                            <TextView
                                android:id="@+id/rating_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="@string/rating_expermintal_text" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/overview_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/heading_layout"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview_text"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:background="#000"></ImageView>

                <TextView
                    android:id="@+id/overview_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="asdf asdf sdj fdsjah jfsdhja fjhdas jhkdshfaj hdajs hjd ashfj asjhjfa sdjh" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/trailers_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/overview_linear_layout"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers_label_text"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:background="#000" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailer_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trailers_linear_layout"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews_label_text"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:background="#000" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/reviews_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


        </RelativeLayout>

        <TextView

            android:id="@+id/tv_error_message_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />
    </FrameLayout>
</ScrollView>