<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/backdrop_imageview"
        android:layout_width="0dp"
        android:layout_height="140dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/cardview_shadow_start_color" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="110dp"
        android:elevation="30dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/poster_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie_poster_description"
            android:src="@mipmap/ic_launcher" />
    </android.support.v7.widget.CardView>

    <com.varunest.sparkbutton.SparkButton
        android:id="@+id/toggle_favorite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="115dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:sparkbutton_activeImage="@drawable/ic_star_on"
        app:sparkbutton_iconSize="40dp"
        app:sparkbutton_inActiveImage="@drawable/ic_star_off"
        app:sparkbutton_primaryColor="@color/spark"
        app:sparkbutton_secondaryColor="@color/spark"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintLeft_toRightOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/backdrop_imageview"
        tools:text="@string/title_experimental_text"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/movie_title"
        app:layout_constraintTop_toBottomOf="@+id/movie_title"
        tools:text="@string/date_expermintal_text"
        android:layout_marginLeft="0dp" />

    <TextView
        android:id="@+id/rating_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toLeftOf="@+id/date_textview"
        app:layout_constraintTop_toBottomOf="@+id/date_textview"
        tools:text="@string/rating_expermintal_text" />

    <TextView
        android:id="@+id/trailers_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/trailers_label_text"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_textview"
        android:layout_marginStart="16dp" />

    <ImageView
        android:id="@+id/divider1_imageview"
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="10dp"
        android:background="#000"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trailers_label_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/trailer_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/divider1_imageview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/review_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/trailers_label_text"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trailer_recyclerview"
        android:layout_marginStart="16dp" />

    <ImageView
        android:id="@+id/divider2_imageview"
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="10dp"
        android:background="#000"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_label_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/reviews_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/divider2_imageview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        android:layout_marginTop="10dp"/>

    <TextView

        android:id="@+id/tv_error_message_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="20sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:visibility="gone" />


</android.support.constraint.ConstraintLayout>